# iphone-use

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.py  llm_test.py  pyproject.toml  screenshot_test.py  test_scroll.py
agent/: agent.py  context.py  events.py  limits.py  logger.py  mcp_client.py  runner.py  sessions.py  sync_mcp_client.py  tool_args.py  tools.py  utils.py  visualizer.py
backend/: main.py
frontend/: index.html
knowledge/: pinduoduo.md
knowledge/wechat/: 主界面.md
knowledge/微信/: 主界面.md
llm/: __init__.py  provider_config.py  structured.py
policy_expr/: __init__.py  config.py  config.yaml  executor.py  output.py  perception.py  reader.py  recon_cli.py  runner.py  schemas.py  trace.py  visualize.py
policy_expr/assets/: capsule_embeddings.npz  capsule_refs.json
policy_expr/policies/: __init__.py  base.py  structured_output.py
policy_expr/recon/: __init__.py  back_nav.py  bfs.py  cascade_matcher.py  dfs.py  fingerprint.py  guiclip_backend.py  icon_detector.py  page_compare.py  page_dedup.py  page_identity.py  page_parser.py  utils.py  viz_transitions.py  yolo_calibrator.py
sck/: sck_stream_server.swift  test_sck.py
scripts/: agent_test.py  collect_screenshot_dataset.py  coord_inspector.py  fingerprint_report.py  gesture_test.py  icon_detect_test.py  llm_test.py  llm_ui_reasoning_test.py  ocr_test.py  ocr_visualize.py  qwen_grounding_test.py  report.py  report_builder.py  run_prompt.py  screenshot_save.py  screenshot_test.py  scroll_test.py  semantic_fingerprint_exp.py  tap_test.py  test_back_nav.py  test_miniprogram.py  type_test.py
(+10 files in other folders)
