[project]
name = "iphone-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.95.0",
    "fastapi>=0.135.3",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "mcp>=1.27.0",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.44.0",
]
