[project]
name = "iphone-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.95.0",
    "coremltools>=9.0",
    "fastapi>=0.135.3",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=1.11.0",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "mcp>=1.27.0",
    "ocrmac>=1.0.1",
    "sse-starlette>=3.3.4",
    "ultralytics>=8.4.38",
    "torch>=2.7.0,<2.8.0",
    "numpy>=1.14.5,<=2.3.5",
    "uvicorn>=0.44.0",
]
